Bug 1422714 - Make return value of WebGLQuery::GetQueryParameter conformant to WebGL2 Spec r=jgilbert

MozReview-Commit-ID: FYgoGOPrGZs